--- a/2026-01 Halos/halos.tex
+++ b/2026-01 Halos/halos.tex
@@ -14,7 +14,7 @@
     \itshape Universidad Nacional Autónoma de México
 }
 
-\date{22 January 2026}
+\date{23 January 2026}
 
 \begin{document}
 
@@ -22,68 +22,90 @@
 
 \begin{abstract}
     \noindent
-    We see halos around bright stars in DDRAGO images in the $g$, $gri$, and $B$ fitlers. We believe these are caused by an internal reflection in the window of the detector.
+    We see halos around bright stars in DDRAGO images in the $g$, $gri$, and $B$ filters. We believe these are caused by an internal reflection in the window of the detector. These reflections appear in the blue filters because the anti-reflection coatings of the windows are optimized for 480 to 1000~nm.
 \end{abstract}
 
 \section{Observations}
 
-DDRAGO images in the $g$, $gri$, and $B$ fitlers show halos around bright stars. Examples are shown in Figure~\ref{figure:example-g-full},  \ref{figure:example-gri-full}, and \ref{figure:example-B-full}. Figure~\ref{figure:example-g-zooms} shows zooms on the halos in Figure~\ref{figure:example-g-full}. These halos are not seen in other filters.
+DDRAGO images in the $g$, $gri$, and $B$ filters show halos around bright stars. Figure~\ref{figure:example-g-full} and Figure~\ref{figure:example-g-zooms} show examples in $g$. Figures \ref{figure:example-gri-full} and \ref{figure:example-B-full} show examples in $gri$ and $B$. These halos are not seen in other filters.
 
 \begin{figure}
-    \includegraphics[width=\linewidth]{figures/20260121T072245C1o.png}
+    \begin{center}
+        \includegraphics[width=\linewidth]{figures/20260121T072245C1o.png}
+    \end{center}
     \caption{An image in $g$ (20260121T072245C1o) showing haloes around bright stars.}
     \label{figure:example-g-full}
 \end{figure}
 
 \begin{figure}
-    \includegraphics[width=\linewidth]{figures/20260117T055354C1o.png}
+    \begin{center}
+        \includegraphics[width=0.45\linewidth]{figures/20260121T072245C1o-A.png}
+        \includegraphics[width=0.45\linewidth]{figures/20260121T072245C1o-E.png}
+
+        \includegraphics[width=0.45\linewidth]{figures/20260121T072245C1o-B.png}
+        \includegraphics[width=0.45\linewidth]{figures/20260121T072245C1o-F.png}
+
+        \includegraphics[width=0.45\linewidth]{figures/20260121T072245C1o-C.png}
+        \includegraphics[width=0.45\linewidth]{figures/20260121T072245C1o-G.png}
+
+        \includegraphics[width=0.45\linewidth]{figures/20260121T072245C1o-D.png}
+        \includegraphics[width=0.45\linewidth]{figures/20260121T072245C1o-H.png}
+    \end{center}
+
+    \caption{Zooms on bright stars in an image in $g$ (20260121T072245C1o) showing haloes.}
+    \label{figure:example-g-zooms}
+\end{figure}
+
+\begin{figure}
+    \begin{center}
+        \includegraphics[width=\linewidth]{figures/20260117T055354C1o.png}
+    \end{center}
     \caption{An image in $gri$ (20260121T072245C1o) showing haloes around bright stars.}
     \label{figure:example-gri-full}
 \end{figure}
 
 \begin{figure}
-    \includegraphics[width=\linewidth]{figures/20260117T055505C1o.png}
+    \begin{center}
+        \includegraphics[width=\linewidth]{figures/20260117T055505C1o.png}
+    \end{center}
     \caption{An image in $B$ (20260117T055505C1o) showing haloes around bright stars.}
     \label{figure:example-B-full}
-\end{figure}
-
-\begin{figure}
-    \includegraphics[width=0.33\linewidth]{figures/20260121T072245C1o-A.png}
-    \includegraphics[width=0.33\linewidth]{figures/20260121T072245C1o-E.png}
-
-    \includegraphics[width=0.33\linewidth]{figures/20260121T072245C1o-B.png}
-    \includegraphics[width=0.33\linewidth]{figures/20260121T072245C1o-F.png}
-
-    \includegraphics[width=0.33\linewidth]{figures/20260121T072245C1o-C.png}
-    \includegraphics[width=0.33\linewidth]{figures/20260121T072245C1o-G.png}
-
-    \includegraphics[width=0.33\linewidth]{figures/20260121T072245C1o-D.png}
-    \includegraphics[width=0.33\linewidth]{figures/20260121T072245C1o-H.png}
-
-    \caption{Zooms on bright stars in an image in $g$ (20260121T072245C1o) showing haloes.}
-    \label{figure:example-g-zooms}
 \end{figure}
 
 The halos are about 34 pixels or 510~{\micron} in radius at the center of the field.
 
 At the position of star A in Figure~\ref{figure:example-g-full}, the halos are approximately centered on the star. Towards the edge of the field, the centers of the halos are displaced away from the field center with respect to the star.
 
-TODO: Estimate the energy in the halo in $g$ and $B$.
+The halo around star D in Figure~\ref{figure:example-g-zooms} is about 110 DN above the background (665 DN compared to 555 DN). Thus, it corresponds to about $4.0 \times 10^{5}$~DN or $1.0\times 10^{6}$~electrons. Star D is HIP 36888. It is saturated in the image, but we can estimate the signal in the primary image. In the APASS catalog, this star has $g \approx 8.5$. Thus, from the measured zero point of the instrument of $5.3\times 10^{9}$ electron/s and the exposure time of 60 seconds, we expect the primary image to have $1.3 \times 10^{8}$ electrons. Thus, the fraction of the light in the halo is about 0.003 in $g$.
 
-\section{Analysis}
+The images shown here are for the blue CCD (SI 1110-167). The red CCD (SI 1110-185) was installed in the blue channel from March to August 2025, and it shows similar halos.
 
-We suspect that the haloes might be from internal reflection in the detector window. This has an optical thickness of 3.2~mm, a physical thickness of 2.2 mm, and is fabricated from fused silica with (“Optical Validation of the DDRAGO CCD,” Fuentes-Fernández \& Cuevas, 2019).
+\section{Origin}
+
+We suspect that the halos might be from internal reflection in the detector window. This has an optical thickness of 3.2~mm, a physical thickness of 2.2 mm, and is fabricated from fused silica with (“Optical Validation of the DDRAGO CCD,” Fuentes-Fernández \& Cuevas, 2019).
 
 The DDRAGO optics deliver an $f/6.3$ beam to the blue CCD, corresponding to a numerical aperture $N=1/6.3$. A single internal reflection in the detector window will form a ghost image a distance $2T$ before the focal plane, in which $T=3.2$~mm is the optical thickness of the window. The radius of this image in the focal plane will be $TN/2 \approx 476$~{\micron}. This is a good match to the measured radius of about 510~{\micron}.
 
+The DDRAGO cameras are not perfectly telecentric. Rather, the chief rays arrive at the detector in a slightly diverging bundle. The halos from any internal reflections in the window for sources away from the optical axis are thus expected to be displaced outward from the primary image. This is exactly what is seen.
+
 \section{Window Coating}
 
-We do not have measurements of the transmission of the window of the blue CCD. It is specified by Spectral Instruments as having $\le 1\%$ reflectivity per surface between 400 and 800~nm. Within this spectral range we expect any halos to be at the level of $10^{-4}$ or less in total light. For a star saturated in four pixels, we expect the level to be around 0.007 DN/pixel. The halos we see are very much brighter than this.
+We do not have measurements of the transmission of the windows of the CCDs. Both were bought with a “Red MLBBAR” coating specified to have <1\% reflectivity from 480 to 1000~nm and <0.5\% from 600 to 900~nm. Thus, the specification covers $r$, $i$, $z$, and $y$, but not $g$ (400 to 550~nm). At the time we asked if Spectral Instruments had a transmission curve to allow us to evaluate the transmission below 480~nm, but they did not.
 
-TODO: Estimate the coating reflectivity in $g$.
+%The $B$ filter has a 50\% transmission point at about 380~nm (“Validation of the DDRAGO Filters,” Fuentes-Fernández \& Cuevas, 2019) and so extends down into a region where the reflectivity of the window is not specified. In this case, it is perhaps not surprising to see these halos.
 
-%The $B$ filter has a 50\% transmission point at about 380 nm (“Validation of the DDRAGO Filters,” Fuentes-Fernández \& Cuevas, 2019) and so extends down into a region where the reflectivity of the window is not specified. In this case, it is not surprising to see these halos. 
+%However, the $g$ and $gri$ filters have 50\% transmission points at 397 and 399~nm, respectively. Thus, the $g$ filter only has a fraction 0.02 of its band-pass below 400~nm.
 
-%The $g$ and $gri$ filters have 50\% transmission points at 397 and 399~nm, respectively, and so formally extend down 
+We estimate that the halo around star D contains about 0.003 of the total light. In order for the halo to be this bright, the average reflectivity of each surface over the $g$ band should be about 0.055.
+
+We also note that the reflectivity was determined for a red star (HIP 36888 has $g-r \approx 1.2$ and $B-V \approx 1.6$), so this does not appear to be simply a problem at the very blue end of the filter. If the specification is correct, it suggests that the reflectivity of the coatings is of order 10\% from 400 to 480 nm and 1\% from 480 to 550~nm.
+
+\section{Science Impact}
+
+The halos are an obvious cosmetic defect. However, their scientific impact is limited.
+
+A star with a FWHM of 1~arcsec that is just at the point of saturation has a signal of about $2 \times 10^{5}$ DN or $4\times 10^{5}$ electrons. The brightness of the halo around such a star is about 0.2 DN/pixel or 0.4 electron/pixel. The halos extend to a radius of about 13~arcsec. The halos are not completely uniform (as the out-of-focus PSF is not completely uniform), and so photometry of faint sources in this region will be impacted.
+
+We estimate that the coatings have an average reflectivity of 0.055. Thus, we expect the average efficiency in $g$ to be lower by about 10\%. Furthermore, we expect that the transmission will be worse in the region from 400 to 480~nm, and this will distort the band-pass of the filter.
 
 \end{document}
