--- a/2026-01 Halos/halos.tex
+++ b/2026-01 Halos/halos.tex
@@ -11,10 +11,11 @@
     Alan M.\ Watson \& Jorge Fuentes-Fernández
     \\[\medskipamount]
     \itshape Instituto de Astronomía\\
-    \itshape Universidad Nacional Autónoma de México
+    \itshape Universidad Nacional Autónoma de México\\[\bigskipamount]
+    COLIBRI\_UNAM\_NOTE\_11\_DDRAGO
 }
 
-\date{23 January 2026}
+\date{29 January 2026}
 
 \begin{document}
 
@@ -107,5 +108,10 @@ The halos are an obvious cosmetic defect. However, their scientific impact is li
 A star with a FWHM of 1~arcsec that is just at the point of saturation has a signal of about $2 \times 10^{5}$ DN or $4\times 10^{5}$ electrons. The brightness of the halo around such a star is about 0.2 DN/pixel or 0.4 electron/pixel. The halos extend to a radius of about 13~arcsec. The halos are not completely uniform (as the out-of-focus PSF is not completely uniform), and so photometry of faint sources in this region will be impacted.
 
 We estimate that the coatings have an average reflectivity of 0.055. Thus, we expect the average efficiency in $g$ to be lower by about 10\%. Furthermore, we expect that the transmission will be worse in the region from 400 to 480~nm, and this will distort the band-pass of the filter.
+
+\section{Plans}
+
+Fixing this problem would require sending the CCD to Spectral Instruments to have them install a new window with their 400 to 800 nm coating. This would mean working with only one CCD for about three months. This would be a substantial loss of capability, so do not propose returning the CCD just to fix this problem. However, if at some point we have to return the CCD for another reason, we would consider replacing the window.
+
 
 \end{document}
